app/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*.suriya.com"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        -  "*.suriya.com"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: wildcard-ssl
        mode: SIMPLE
